Initial very dummy implementation of getting imap messages and syncing them - some things are totally wrong here, will be fixed anytime soon now :D
